hphp/test/slow/closure/new_closure_without_constructor.php.expectf
object(Closure$test;9) (1) {
  ["static"]=>
  darray(1) {
    ["x"]=>
    dict(1) {
      ["a"]=>
      string(1) "b"
    }
  }
}

Fatal error: Can't create a Closure directly in %s/new_closure_without_constructor.php on line 10
